--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                         <li><a href="#">Services</a></li>
                         <li><a href="#">Contacts</a></li>
                     </ul>
+                    <div class="hamburger">
+                        <span></span>
+                    </div>
                 </div>
             </nav>
         </header>
